kcoop_react/src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

/* FOR FOOTER, ALWAYS AT BOTTOM*/
/*footer{
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
}*/

body > footer {
  position: fixed;
  
  left: 0;
  bottom: 0;
  width: 100%;
}


@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  /*font-size: 13px;*/
}

.carousel{
  display: flex;
  justify-content: center;
}
/*
.carousel .slide{
  background-color: rgb(254, 176, 98);
  height: 80vh;
}
*/
.carousel .slide img{
  max-height: 100%;
  width: auto;
}

.image{
  margin: 0 auto;
  /*height: 100%;*/
  width: auto;
}

/* On smaller screens, decrease text size */
@media only screen and (max-width: 300px) {
  .text {font-size: 11px}
}

@media only screen and (max-width: 1200px){
  

  .carousel .slide img{
   
    width: auto;
  }
}

@media only screen and (max-width: 900px){
  

  .carousel .slide img{
  
    width: auto;
  }
}

@media only screen and (max-width: 700px){
  

  .carousel .slide img{
   
    width: auto;
  }
}

@media only screen and (max-width: 500px){
 

  .carousel .slide img{
   
    width: auto;
  }
}

html {
  scroll-behavior: smooth;
}

/*###############################################3*/

